--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "proxy": "http://localhost:4000/",
     "dependencies": {
+        "@chakra-ui/react": "^2.2.4",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.27.2",
+        "crypto-js": "^4.1.1",
+        "flowbite": "^1.4.7",
+        "framer-motion": "^6.5.1",
         "gh-pages": "^4.0.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
@@ -16,6 +21,7 @@
         "react-scripts": "5.0.1",
         "redux": "^4.2.0",
         "socket.io-client": "^4.5.1",
+        "sweetalert2": "^11.4.22",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -41,5 +47,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.5"
     }
 }
