--- a/package.json
+++ b/package.json
@@ -1,55 +1,186 @@
 {
+   
     "name": "frontend",
+   
     "version": "0.1.0",
+   
     "private": true,
+   
     "dependencies": {
-        "@chakra-ui/react": "^2.2.4",
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
-        "@testing-library/jest-dom": "^5.16.4",
-        "@testing-library/react": "^13.2.0",
-        "@testing-library/user-event": "^13.5.0",
-        "axios": "^0.27.2",
-        "crypto-js": "^4.1.1",
-        "flowbite": "^1.4.7",
-        "framer-motion": "^6.5.1",
-        "gh-pages": "^4.0.0",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-redux": "^8.0.1",
-        "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.1",
-        "redux": "^4.2.0",
-        "socket.io-client": "^4.5.1",
-        "sweetalert2": "^11.4.22",
-        "web-vitals": "^2.1.4"
+   
+       
+    "@chakra-ui/react": "^2.2.4",
+   
+       
+    "@emotion/react": "^11.9.3",
+   
+       
+    "@emotion/styled": "^11.9.3",
+   
+       
+    "@testing-library/jest-dom": "^5.16.4",
+   
+       
+    "@testing-library/react": "^13.2.0",
+   
+       
+    "@testing-library/user-event": "^13.5.0",
+   
+       
+    "assert": "^2.0.0",
+   
+       
+    "axios": "^0.27.2",
+   
+       
+    "buffer": "^6.0.3",
+   
+       
+    "crypto-browserify": "^3.12.0",
+   
+       
+    "encrypt-rsa": "^2.1.2",
+   
+       
+    "flowbite": "^1.4.7",
+   
+       
+    "framer-motion": "^6.5.1",
+   
+       
+    "gh-pages": "^4.0.0",
+   
+       
+    "https-browserify": "^1.0.0",
+   
+       
+    "next-tick": "^1.1.0",
+   
+       
+    "os-browserify": "^0.3.0",
+   
+       
+    "react": "^18.1.0",
+   
+       
+    "react-dom": "^18.1.0",
+   
+       
+    "react-redux": "^8.0.1",
+   
+       
+    "react-router-dom": "^6.3.0",
+   
+       
+    "react-scripts": "^5.0.1",
+   
+       
+    "redux": "^4.2.0",
+   
+       
+    "socket.io-client": "^4.5.1",
+   
+       
+    "stream-browserify": "^3.0.0",
+   
+       
+    "stream-http": "^3.2.0",
+   
+       
+    "sweetalert2": "^11.4.22",
+   
+       
+    "url": "^0.11.0",
+   
+       
+    "web-vitals": "^2.1.4"
+   
     },
+   
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+   
+       
+    "start": "react-app-rewired start",
+   
+       
+    "build": "react-app-rewired build",
+   
+       
+    "test": "react-app-rewired test",
+   
+       
+    "eject": "react-scripts eject"
+   
     },
+   
     "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
+   
+       
+    "extends": [
+   
+       
+       
+    "react-app",
+   
+       
+       
+    "react-app/jest"
+   
+       
+    ]
+   
     },
+   
     "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+   
+       
+    "production": [
+   
+       
+       
+    ">0.2%",
+   
+       
+       
+    "not dead",
+   
+       
+       
+    "not op_mini all"
+   
+       
+    ],
+   
+       
+    "development": [
+   
+       
+       
+    "last 1 chrome version",
+   
+       
+       
+    "last 1 firefox version",
+   
+       
+       
+    "last 1 safari version"
+   
+       
+    ]
+   
     },
+   
     "devDependencies": {
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.5"
+   
+       
+    "postcss": "^8.4.14",
+   
+       
+    "react-app-rewired": "^2.2.1",
+   
+       
+    "tailwindcss": "^3.1.5"
+   
     }
 }
