--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "https-browserify": "^1.0.0",
    
        
+    "jsencrypt": "^3.2.1",
+   
+       
     "next-tick": "^1.1.0",
    
        
